# Mastodon-Greeter

./: Cargo.toml  README.md  conf.ini  event.json  flake.nix
src/: error.rs  main.rs
