[package]
name = "mastodon-greeter"
version = "0.1.0"
authors = ["Rémy Grünblatt <remy@grunblatt.org>"]
edition = "2021"

[dependencies]
actix-web = "4.2.1"
env_logger = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
futures = "0.3"
reqwest =  { version = "0.11", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }
rust-crypto = "0.2.36"
hex = "0.4.3"
regex = "1.7.0"
clap =  { version = "4.0.29", features = ["derive"] }
rust-ini = "0.18.0"
chrono = "0.4.23"
thiserror = "1.0"
